--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="id">
 <head>
-  https://github.com/briliantcell/Aaparfume/blob/main/googled20d30b0b84bdc52%20(1).html
+  <meta name="google-site-verification" content="6lu_iWbRuMJTEYXLJ7ghi3cWBfQtZ5DHSyrJiUIU7wU" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>AA Parfume — Wangi Elegan, Harga Bersahabat</title>
