--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <img src="image1.jpg" alt="Produk AA Parfume Roll On">
         <h3>AA Parfume Roll On</h3>
         <div class="price">Rp 9.150</div>
-        <p>Minyak wangi roll on praktis, mudah dibawa kemana saja. Ukuran 12ml.</p>
+        <p>Minyak wangi roll on praktis, mudah dibawa kemana saja. Ukuran 6ml.</p>
         <a class="btn btn-primary" href="http://shopee.co.id/agenaaparfume" target="_blank">Beli di Shopee</a>
       </article>
 
@@ -257,7 +257,7 @@
         <img src="image6.jpg" alt="Produk AA Parfume Spray">
         <h3>AA Parfume Spray</h3>
         <div class="price">Rp 25.900</div>
-        <p>Minyak wangi spray elegan dengan aroma tahan lama. Ukuran 50ml.</p>
+        <p>Minyak wangi spray elegan dengan aroma tahan lama. Ukuran 20ml.</p>
         <a class="btn btn-primary" href="http://shopee.co.id/agenaaparfume" target="_blank">Beli di Shopee</a>
       </article>
 
@@ -265,7 +265,7 @@
         <img src="image5.jpg" alt="Produk AA Parfume Premium">
         <h3>AA Parfume Roll on 8ml Premium</h3>
         <div class="price">Rp 14.000</div>
-        <p>Koleksi parfum premium dengan aroma mewah khas AA Parfume. Ukuran 100ml.</p>
+        <p>Koleksi parfum premium dengan aroma mewah khas AA Parfume. Ukuran 8ml.</p>
         <a class="btn btn-primary" href="http://shopee.co.id/agenaaparfume" target="_blank">Beli di Shopee</a>
       </article>
 
@@ -273,7 +273,7 @@
         <img src="image4.jpg" alt="Produk AA Parfume Travel Size">
         <h3>AA Parfume Travel Size</h3>
         <div class="price">Rp 9.150</div>
-        <p>Parfum ukuran mini untuk menemani perjalananmu. Ukuran 10ml.</p>
+        <p>Parfum ukuran mini untuk menemani perjalananmu. Ukuran 6ml.</p>
         <a class="btn btn-primary" href="http://shopee.co.id/agenaaparfume" target="_blank">Beli di Shopee</a>
       </article>
 
@@ -281,7 +281,7 @@
         <img src="image7.jpg" alt="Produk AA Parfume Exclusive Edition">
         <h3>AA Parfume Exclusive Edition</h3>
         <div class="price">Rp 15.000</div>
-        <p>Edisi eksklusif dengan aroma khas yang diracik terbatas untuk pecinta parfum sejati. Ukuran 120ml.</p>
+        <p>Edisi eksklusif dengan aroma khas yang diracik terbatas untuk pecinta parfum sejati. Ukuran 6ml premium quality.</p>
         <a class="btn btn-primary" href="http://shopee.co.id/agenaaparfume" target="_blank">Beli di Shopee</a>
       </article>
     </div>
@@ -465,6 +465,7 @@
   </script>
 </body>
 </html>
+
 
 
 
