--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <a class="btn btn-ghost" href="http://shopee.co.id/agenaaparfume" target="_blank">Beli di Shopee</a>
     </div>
     <div>
-      <img src="gambar/image2.jpg" alt="Banner AA Parfume dengan botol parfum elegan">
+      <img src="image2.jpg" alt="Banner AA Parfume dengan botol parfum elegan">
     </div>
   </section>
 
@@ -254,7 +254,7 @@
     <h2 style="font-family:Playfair Display;color:#fff">Produk Kami</h2>
     <div class="products-grid">
       <article class="product">
-        <img src="gambar/image1.jpg" alt="Produk AA Parfume Roll On">
+        <img src="image1.jpg" alt="Produk AA Parfume Roll On">
         <h3>AA Parfume Roll On</h3>
         <div class="price">Rp 9.150</div>
         <p>Minyak wangi roll on praktis, mudah dibawa kemana saja. Ukuran 12ml.</p>
@@ -262,7 +262,7 @@
       </article>
 
       <article class="product">
-        <img src="gambar/image6.jpg" alt="Produk AA Parfume Spray">
+        <img src="image6.jpg" alt="Produk AA Parfume Spray">
         <h3>AA Parfume Spray</h3>
         <div class="price">Rp 25.900</div>
         <p>Minyak wangi spray elegan dengan aroma tahan lama. Ukuran 50ml.</p>
@@ -270,7 +270,7 @@
       </article>
 
       <article class="product">
-        <img src="gambar/image5.jpg" alt="Produk AA Parfume Premium">
+        <img src="image5.jpg" alt="Produk AA Parfume Premium">
         <h3>AA Parfume Roll on 8ml Premium</h3>
         <div class="price">Rp 14.000</div>
         <p>Koleksi parfum premium dengan aroma mewah khas AA Parfume. Ukuran 100ml.</p>
@@ -278,7 +278,7 @@
       </article>
 
       <article class="product">
-        <img src="gambar/image4.jpg" alt="Produk AA Parfume Travel Size">
+        <img src="image4.jpg" alt="Produk AA Parfume Travel Size">
         <h3>AA Parfume Travel Size</h3>
         <div class="price">Rp 9.150</div>
         <p>Parfum ukuran mini untuk menemani perjalananmu. Ukuran 10ml.</p>
@@ -286,7 +286,7 @@
       </article>
 
       <article class="product">
-        <img src="gambar/image7.jpg" alt="Produk AA Parfume Exclusive Edition">
+        <img src="image7.jpg" alt="Produk AA Parfume Exclusive Edition">
         <h3>AA Parfume Exclusive Edition</h3>
         <div class="price">Rp 15.000</div>
         <p>Edisi eksklusif dengan aroma khas yang diracik terbatas untuk pecinta parfum sejati. Ukuran 120ml.</p>
@@ -473,3 +473,4 @@
   </script>
 </body>
 </htm
+
