--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="id">
 <head>
-  <meta name="google-site-verification" content="8ZrnIv3ql2M-vMsCM_zaJBRXEVhUUYO8nx-oexs-50w" />
+  <meta name="google-site-verification" content="8ZrnIv3ql2M-vMsCM_zaJBRXEVhUUYO8nx-oexs-50w">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>AA Parfume — Wangi Elegan, Harga Bersahabat</title>
@@ -473,5 +473,6 @@
   </script>
 </body>
 </htm
+
 
 
