--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aa Parfume - Parfume Berkualitas Premium</title>
+  <meta name="google-site-verification" content="8ZrnIv3ql2M-vMsCM_zaJBRXEVhUUYO8nx-oexs-50w">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>AA Parfume — Wangi Elegan, Harga Bersahabat</title>
+  <meta name="description" content="AA Parfume — Wangi Elegan, Harga Bersahabat. Koleksi parfum mewah dengan bahan pilihan dan harga bersahabat.">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Material Icons -->
