--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="shortcut icon" href="img.logo/image65-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="image65-removebg-preview.png" type="image/x-icon">
     <style>
         /* Reset and base styles */
         * {
@@ -846,7 +846,7 @@
                 <i class="material-icons">menu</i>
             </button>
             <div class="logo">
-                <img src="img.logo/image65-removebg-preview.png" alt="Aa Parfume Logo">
+                <img src="image65-removebg-preview.png" alt="Aa Parfume Logo">
                 <span>Aa Parfume</span>
             </div>
         </div>
@@ -1655,3 +1655,4 @@
     </script>
 </body>
 </html>
+
