--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@
                             <div class="video-title">Roll On Premium - Aroma Musk</div>
                             <div class="video-meta">
                                 <div class="channel-name">Aa Parfume</div>
-                                <div>Terjual 1.2K • Tahan 8 jam</div>
+                                <div>Terjual 10.K+ • Tahan 8 jam</div>
                             </div>
                             <a href="https://s.shopee.co.id/9fDNZImMXj" class="shopee-button" target="_blank" onclick="trackShopeeClick('Roll On Premium - Aroma Musk')">
                                 <i class="fas fa-shopping-cart"></i>
@@ -1270,7 +1270,7 @@
                             <div class="video-title">Spray Elegant - Floral Bouquet</div>
                             <div class="video-meta">
                                 <div class="channel-name">Aa Parfume</div>
-                                <div>Terjual 890 • Tahan 12 jam</div>
+                                <div>Terjual 1.K+ • Tahan 12 jam</div>
                             </div>
                             <a href="https://s.shopee.co.id/9fDNZImMXj" class="shopee-button" target="_blank" onclick="trackShopeeClick('Spray Elegant - Floral Bouquet')">
                                 <i class="fas fa-shopping-cart"></i>
@@ -1318,7 +1318,7 @@
                             <div class="video-title">Eropa Classic - French Inspiration</div>
                             <div class="video-meta">
                                 <div class="channel-name">Aa Parfume</div>
-                                <div>Terjual 756 • Import Quality</div>
+                                <div>Terjual 5.K+ • Import Quality</div>
                             </div>
                             <a href="https://s.shopee.co.id/9fDNZImMXj" class="shopee-button" target="_blank" onclick="trackShopeeClick('Eropa Classic - French Inspiration')">
                                 <i class="fas fa-shopping-cart"></i>
@@ -2012,3 +2012,4 @@
     </script>
 </body>
 </html>
+
