--- a/index.html
+++ b/index.html
@@ -1873,7 +1873,7 @@
                         <div class="sales-info" style="margin-bottom: 10px;">
                             <span class="sales-badge" style="background: linear-gradient(135deg, #4CAF50 0%, #2E7D32 100%);">
                                 <i class="fas fa-handshake"></i>
-                                50+ Mitra Aktif
+                                5+ Mitra Aktif
                             </span>
                         </div>
                         <a href="https://wa.me/6283166584901" class="shopee-button" target="_blank" onclick="trackShopeeClick('Supplier Partnership Program')" style="background: linear-gradient(135deg, #25D366 0%, #128C7E 100%);">
@@ -1890,7 +1890,7 @@
                         <div class="sales-info" style="margin-bottom: 10px;">
                             <span class="sales-badge" style="background: linear-gradient(135deg, #4CAF50 0%, #2E7D32 100%);">
                                 <i class="fas fa-boxes"></i>
-                                Min. Order 100 pcs
+                                Min. Order 2 lusin
                             </span>
                         </div>
                         <a href="https://wa.me/6283166584901" class="shopee-button" target="_blank" onclick="trackShopeeClick('Supplier MASJID AL IKHLAS')" style="background: linear-gradient(135deg, #25D366 0%, #128C7E 100%);">
@@ -2453,3 +2453,4 @@
     </script>
 </body>
 </html>
+
